--- a/index.html
+++ b/index.html
@@ -15,48 +15,35 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#server-info">Server Info</a></li>
-                <li><a href="#events">Evenementen</a></li>
+                <li><a href="#info">Informatie</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home" class="section">
-        <h2>Welkom op JD Games</h2>
-        <p>Welkom op de JD Games Minecraft server! Sluit je aan bij onze gemeenschap en beleef de ultieme Minecraft-ervaring!</p>
+        <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
+        <p>Welkom bij JD Games! Beleef een fantastische Minecraft-ervaring met ons op onze server!</p>
     </section>
 
-    <section id="server-info" class="section">
-        <h2>Server Informatie</h2>
-        <p>Server IP: <strong>mc.jdgames.com</strong></p>
-        <p>Game Mode: Survival, Creative, Minigames</p>
-        <p>Actieve spelers: 50/100</p>
-    </section>
-
-    <section id="events" class="section">
-        <h2>Komende Evenementen</h2>
+    <section id="info" class="section">
+        <h2>Informatie Over Ons:</h2>
         <ul>
-            <li><strong>Survival World Tournament:</strong> 15 november, 20:00 uur</li>
-            <li><strong>Creative Build Competition:</strong> 22 november, 18:00 uur</li>
+            <li>✈️ IP-adres: <strong>Play.jdgames.nl</strong></li>
+            <li>⚡ Versie: <strong>1.21+</strong></li>
+            <li>⚔️ Gamemode: <strong>Survival & Skyblock</strong></li>
+            <li>❄️ Openings Tijden: <strong>24/7</strong></li>
+            <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor Discord</a></li>
+            <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
         </ul>
     </section>
 
     <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Heb je vragen? Neem contact op met onze staff!</p>
-        <form action="mailto:info@jdgames.com" method="post" enctype="text/plain">
-            <label for="name">Naam:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Bericht:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Verzenden</button>
-        </form>
+        <h2>Contacteer ons:</h2>
+        <ul>
+            <li>☎️ Discord: Maak een ticket aan via onze Discord server.</li>
+            <li>☎️ Email: <strong>JDGamesOfficialYT@gmail.com</strong></li>
+        </ul>
     </section>
 
     <footer>
