--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         </nav>
     </header>
 
+    <!-- Home sectie -->
     <section id="home" class="section">
         <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
         <p>Welkom bij JD Games! Beleef een fantastische Minecraft-ervaring met ons op onze server!</p>
     </section>
 
+    <!-- Informatie sectie -->
     <section id="info" class="section">
         <h2>Informatie Over Ons:</h2>
         <ul>
@@ -38,6 +40,7 @@
         </ul>
     </section>
 
+    <!-- Contact sectie -->
     <section id="contact" class="section">
         <h2>Contacteer ons:</h2>
         <ul>
@@ -46,8 +49,12 @@
         </ul>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
     </footer>
+
+    <!-- Koppeling naar het JavaScript bestand -->
+    <script src="script.js"></script>
 </body>
 </html>
