--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#info">Informatie</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#staff-team">Staff Team</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Home sectie -->
-    <section id="home" class="section">
+    <!-- Home sectie: Welkomstbericht, Informatie, en Contact -->
+    <section id="home" class="section active">
         <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
         <p>Welkom bij JD Games! Beleef een fantastische Minecraft-ervaring met ons op onze server!</p>
-    </section>
 
-    <!-- Informatie sectie -->
-    <section id="info" class="section">
-        <h2>Informatie Over Ons:</h2>
+        <h3>Informatie Over Ons:</h3>
         <ul>
             <li>✈️ IP-adres: <strong>Play.jdgames.nl</strong></li>
             <li>⚡ Versie: <strong>1.21+</strong></li>
@@ -38,14 +34,30 @@
             <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor Discord</a></li>
             <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
         </ul>
-    </section>
 
-    <!-- Contact sectie -->
-    <section id="contact" class="section">
-        <h2>Contacteer ons:</h2>
+        <h3>Contacteer ons:</h3>
         <ul>
             <li>☎️ Discord: Maak een ticket aan via onze Discord server.</li>
             <li>☎️ Email: <strong>JDGamesOfficialYT@gmail.com</strong></li>
+        </ul>
+    </section>
+
+    <!-- Staff Team sectie -->
+    <section id="staff-team" class="section">
+        <h2>✈️ Welkom bij JD Games - Ontmoet Ons Team</h2>
+        <p>Geachte Spelers,</p>
+        <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
+
+        <h3>Ons Team</h3>
+        <ul>
+            <li><strong>Jonathan - Eigenaar</strong></li>
+            <p>Functie: Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+
+            <li><strong>David - Eigenaar</strong></li>
+            <p>Functie: Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden / Spelers. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+
+            <li><strong>Nisse - Management</strong></li>
+            <p>Functie: Nisse is lid van ons management team en ons Hoofd Development team, Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
         </ul>
     </section>
 
