--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JD Games - Server Regels</title>
+    <title>JD Games - Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,10 +15,51 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
+                <li><a href="#staff">Staff Team</a></li>
                 <li><a href="#rules">Regels</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Home sectie -->
+    <section id="home" class="section">
+        <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
+        <h3>Informatie Over ons:</h3>
+        <ul>
+            <li>✈️ IP-adres: Play.jdgames.nl</li>
+            <li>⚡ Versie: 1.21+</li>
+            <li>⚔️ Gamemode: Survival & Skyblock</li>
+            <li>❄️ Openings Tijden: 24/7</li>
+            <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">discord.gg/9haVXV8gXT</a></li>
+            <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+        </ul>
+
+        <h3>Contacteer ons:</h3>
+        <ul>
+            <li>☎️ Discord: Maak een ticket aan</li>
+            <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+        </ul>
+    </section>
+
+    <!-- Staff Team sectie -->
+    <section id="staff" class="section">
+        <h2>✈️ Welkom bij JD Games - Ontmoet Ons Team</h2>
+        <p>Geachte Spelers,</p>
+        <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
+
+        <h3>Ons Team</h3>
+        <ul>
+            <li><strong>Jonathan - Eigenaar</strong>
+                <p>Functie: Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+            </li>
+            <li><strong>David - Eigenaar</strong>
+                <p>Functie: Als oprichter en servereigenaar is David verantwoordelijk voor De betalingen en het helpen van de staffleden / Spelers, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+            </li>
+            <li><strong>Nisse - Management</strong>
+                <p>Functie: Nisse is lid van ons management team en ons Hoofd Development team, Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
+            </li>
+        </ul>
+    </section>
 
     <!-- Regels sectie -->
     <section id="rules" class="section">
@@ -34,7 +75,6 @@
         <!-- Factions Regels -->
         <div id="factions" class="tabcontent">
             <h3>⚔️ Faction Server Reglement ⚔️</h3>
-            <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke ban of permanente bans.</p>
             <ul>
                 <li>Artikel 1 - Geen Hacks
                     <ul>
@@ -54,74 +94,30 @@
                         <li>3.2 Dit geldt ook voor het spammen van links in de chat.</li>
                     </ul>
                 </li>
-                <li>Artikel 4 - Bugs Melden
-                    <ul>
-                        <li>4.1 Het misbruik van bugs of glitches in de game of server is niet toegestaan.</li>
-                        <li>4.2 Spelers zijn verplicht om ontdekte bugs onmiddellijk te melden aan de serverstaff om de integriteit van de server te waarborgen.</li>
-                    </ul>
-                </li>
-                <li>Artikel 5 - Luisteren naar Staff
-                    <ul>
-                        <li>5.1 Spelers dienen altijd de instructies en beslissingen van de serverstaff te respecteren en op te volgen.</li>
-                        <li>5.2 Het negeren of in diskrediet brengen van de staff kan resulteren in sancties.</li>
-                    </ul>
-                </li>
             </ul>
-            <p><strong>Sancties voor Overtredingen:</strong> Bij overtredingen van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban of permanente bans.</p>
         </div>
 
         <!-- Skyblock Regels -->
         <div id="skyblock" class="tabcontent">
             <h3>⚡ Skyblock Server Reglement ⚡</h3>
-            <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
             <ul>
                 <li>Artikel 1 - Geen Griefing of Diefstal
                     <ul>
                         <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
                         <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
-                        <li>1.3 Samenwerken is toegestaan.</li>
                     </ul>
                 </li>
                 <li>Artikel 2 - Geen Hacks, Cheats of Exploits
                     <ul>
                         <li>2.1 Het gebruik van hacks of exploits die een oneerlijk voordeel bieden, zoals fly hacks, x-ray, of autoclickers, is strikt verboden.</li>
-                        <li>2.2 Alleen visuele mods (zoals shaders en texture packs) zijn toegestaan, mits deze geen invloed hebben op de gameplay.</li>
-                        <li>2.3 Het misbruik van bugs of exploits binnen het spel of server is verboden en moet direct worden gemeld aan het staffteam.</li>
                     </ul>
                 </li>
                 <li>Artikel 3 - Respect en Gedrag
                     <ul>
                         <li>3.1 Beledigingen, scheldwoorden, racisme, discriminatie, en elke vorm van intimidatie zijn verboden.</li>
-                        <li>3.2 Wees beleefd in de chat en gebruik geen agressieve of toxische taal.</li>
-                        <li>3.3 Respecteer de serverstaff en hun beslissingen.</li>
-                    </ul>
-                </li>
-                <li>Artikel 4 - Geen Spam of Reclame
-                    <ul>
-                        <li>4.1 Spammen van berichten, commando's, of willekeurige tekens in de chat is niet toegestaan.</li>
-                        <li>4.2 Het adverteren van andere servers of producten zonder toestemming van het serverteam is verboden.</li>
-                    </ul>
-                </li>
-                <li>Artikel 5 - Gebruik van Meerder Accounts
-                    <ul>
-                        <li>5.1 Het is niet toegestaan om meerdere accounts te gebruiken om oneerlijke voordelen te behalen.</li>
-                        <li>5.2 Het creëren van "alt accounts" om bans te ontwijken zal resulteren in een permanente verbanning van beide accounts.</li>
-                    </ul>
-                </li>
-                <li>Artikel 6 - Eerlijke Handel
-                    <ul>
-                        <li>6.1 Handel tussen spelers moet eerlijk en transparant verlopen.</li>
-                        <li>6.2 Gebruik de door de server geboden handelsmogelijkheden om veilige transacties te garanderen.</li>
-                    </ul>
-                </li>
-                <li>Artikel 7 - Eiland Beheer
-                    <ul>
-                        <li>7.1 Elk eiland is het eigendom van de eigenaar.</li>
-                        <li>7.2 Het verlaten van een team zonder toestemming of het ontnemen van eigendommen zonder overleg met de eigenaar is verboden.</li>
                     </ul>
                 </li>
             </ul>
-            <p><strong>Sancties voor Overtredingen:</strong> Bij overtreding van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban, of permanente bans.</p>
         </div>
     </section>
 
