--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#staff">Staff Team</a></li>
                 <li><a href="#rules">Regels</a></li>
             </ul>
