--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#staff">Staff Team</a></li>
-                <li><a href="#rules">Regels</a></li>
+                <li><a href="staff.html">Staff Team</a></li>
+                <li><a href="rules.html">Regels</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Home sectie -->
-    <section id="home" class="section">
+    <section id="home">
         <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
         <h3>Informatie Over ons:</h3>
         <ul>
@@ -41,90 +41,8 @@
         </ul>
     </section>
 
-    <!-- Staff Team sectie -->
-    <section id="staff" class="section">
-        <h2>✈️ Welkom bij JD Games - Ontmoet Ons Team</h2>
-        <p>Geachte Spelers,</p>
-        <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
-
-        <h3>Ons Team</h3>
-        <ul>
-            <li><strong>Jonathan - Eigenaar</strong>
-                <p>Functie: Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-            </li>
-            <li><strong>David - Eigenaar</strong>
-                <p>Functie: Als oprichter en servereigenaar is David verantwoordelijk voor De betalingen en het helpen van de staffleden / Spelers, Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-            </li>
-            <li><strong>Nisse - Management</strong>
-                <p>Functie: Nisse is lid van ons management team en ons Hoofd Development team, Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Ook zal hij als Staff Coördinator gaan opletten en reageren op staff klachten & Refund Tickets.</p>
-            </li>
-        </ul>
-    </section>
-
-    <!-- Regels sectie -->
-    <section id="rules" class="section">
-        <h2>⚔️ Server Regels ⚔️</h2>
-        <p>Kies een server om de bijbehorende regels te bekijken:</p>
-
-        <!-- Keuze tussen Factions en Skyblock -->
-        <div class="rule-choice">
-            <button class="tablinks" onclick="showRules(event, 'factions')">Factions Regels</button>
-            <button class="tablinks" onclick="showRules(event, 'skyblock')">Skyblock Regels</button>
-        </div>
-
-        <!-- Factions Regels -->
-        <div id="factions" class="tabcontent">
-            <h3>⚔️ Faction Server Reglement ⚔️</h3>
-            <ul>
-                <li>Artikel 1 - Geen Hacks
-                    <ul>
-                        <li>1.1 Het gebruik van hacks, cheats of exploits die een oneerlijk voordeel bieden in de gameplay is ten strengste verboden.</li>
-                        <li>1.2 Het gebruik maken van X-ray is wel toegestaan.</li>
-                    </ul>
-                </li>
-                <li>Artikel 2 - Schelden met Ziekten
-                    <ul>
-                        <li>2.1 Beledigingen of scheldwoorden die betrekking hebben op ziektes of aandoeningen zijn niet toegestaan.</li>
-                        <li>2.2 Dit soort gedrag wordt beschouwd als ongepast en kan leiden tot sancties.</li>
-                    </ul>
-                </li>
-                <li>Artikel 3 - Zelfpromotie
-                    <ul>
-                        <li>3.1 Het adverteren van andere servers, persoonlijke projecten of diensten zonder voorafgaande toestemming van de serverstaff is verboden.</li>
-                        <li>3.2 Dit geldt ook voor het spammen van links in de chat.</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-        <!-- Skyblock Regels -->
-        <div id="skyblock" class="tabcontent">
-            <h3>⚡ Skyblock Server Reglement ⚡</h3>
-            <ul>
-                <li>Artikel 1 - Geen Griefing of Diefstal
-                    <ul>
-                        <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
-                        <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
-                    </ul>
-                </li>
-                <li>Artikel 2 - Geen Hacks, Cheats of Exploits
-                    <ul>
-                        <li>2.1 Het gebruik van hacks of exploits die een oneerlijk voordeel bieden, zoals fly hacks, x-ray, of autoclickers, is strikt verboden.</li>
-                    </ul>
-                </li>
-                <li>Artikel 3 - Respect en Gedrag
-                    <ul>
-                        <li>3.1 Beledigingen, scheldwoorden, racisme, discriminatie, en elke vorm van intimidatie zijn verboden.</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </section>
-
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
