--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JD Games - Minecraft Server</title>
+    <title>Home | JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,28 +20,20 @@
         </nav>
     </header>
 
-    <!-- Home sectie -->
     <section id="home">
-        <h2>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h2>
-        <h3>Informatie Over ons:</h3>
-        <ul>
-            <li>✈️ IP-adres: Play.jdgames.nl</li>
-            <li>⚡ Versie: 1.21+</li>
-            <li>⚔️ Gamemode: Survival & Skyblock</li>
-            <li>❄️ Openings Tijden: 24/7</li>
-            <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">discord.gg/9haVXV8gXT</a></li>
-            <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
-        </ul>
-
-        <h3>Contacteer ons:</h3>
-        <ul>
-            <li>☎️ Discord: Maak een ticket aan</li>
-            <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
-        </ul>
+        <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+        <p>Welkom bij JD Games! We bieden een geweldige Minecraft server-ervaring met verschillende game modes.</p>
+        <p>✈️ IP-adres: Play.jdgames.nl</p>
+        <p>⚡ Versie: 1.21+</p>
+        <p>⚔️ Gamemode: Survival & Skyblock</p>
+        <p>❄️ Openings Tijden: 24/7</p>
+        <p>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier</a></p>
+        <p>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">Klik hier</a></p>
     </section>
 
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
