--- a/rules.html
+++ b/rules.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JD Games - Server Regels</title>
+    <title>Regels | JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,11 +20,8 @@
         </nav>
     </header>
 
-    <!-- Regels sectie -->
     <section id="rules">
-        <h2>⚔️ Server Regels ⚔️</h2>
-        <p>Kies een server om de bijbehorende regels te bekijken:</p>
-
+        <h2>⚔️ Kies een serverreglement</h2>
         <div class="rule-choice">
             <button onclick="window.location.href='factions_rules.html'">Factions Regels</button>
             <button onclick="window.location.href='skyblock_rules.html'">Skyblock Regels</button>
@@ -34,6 +30,7 @@
 
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
