--- a/factions_rules.html
+++ b/factions_rules.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Factions Regels</title>
+    <title>Factions Regels | JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,21 +20,21 @@
         </nav>
     </header>
 
-    <!-- Factions Regels -->
     <section id="factions_rules">
         <h2>⚔️ Faction Server Reglement ⚔️</h2>
-        <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke ban of permanente bans.</p>
+        <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven.</p>
         <ul>
             <li><strong>Artikel 1 - Geen Hacks:</strong> Het gebruik van hacks of cheats is verboden.</li>
             <li><strong>Artikel 2 - Schelden met Ziekten:</strong> Beledigingen met ziektes zijn niet toegestaan.</li>
             <li><strong>Artikel 3 - Zelfpromotie:</strong> Zelfpromotie zonder toestemming is verboden.</li>
-            <li><strong>Artikel 4 - Bugs Melden:</strong> Bugs moeten gemeld worden aan de staff.</li>
-            <li><strong>Artikel 5 - Luisteren naar Staff:</strong> Het negeren van staff is verboden.</li>
+            <li><strong>Artikel 4 - Bugs Melden:</strong> Misbruik van bugs is verboden.</li>
+            <li><strong>Artikel 5 - Luisteren naar Staff:</strong> Respecteer altijd de staff.</li>
         </ul>
     </section>
 
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
