--- a/skyblock_rules.html
+++ b/skyblock_rules.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Skyblock Regels</title>
+    <title>Skyblock Regels | JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,21 +20,21 @@
         </nav>
     </header>
 
-    <!-- Skyblock Regels -->
     <section id="skyblock_rules">
         <h2>⚡ Skyblock Server Reglement ⚡</h2>
         <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven.</p>
         <ul>
-            <li><strong>Artikel 1 - Geen Griefing of Diefstal:</strong> Het is verboden om eigendommen van anderen te vernietigen of te stelen.</li>
-            <li><strong>Artikel 2 - Geen Hacks, Cheats of Exploits:</strong> Het gebruik van hacks is verboden.</li>
-            <li><strong>Artikel 3 - Respect en Gedrag:</strong> Beledigingen en schelden zijn niet toegestaan.</li>
-            <li><strong>Artikel 4 - Geen Spam of Reclame:</strong> Spammen of reclame maken is verboden.</li>
-            <li><strong>Artikel 5 - Gebruik van Meerder Accounts:</strong> Het gebruiken van meerdere accounts voor voordelen is verboden.</li>
+            <li><strong>Artikel 1 - Geen Griefing:</strong> Het vernietigen of stelen van eigendommen is verboden.</li>
+            <li><strong>Artikel 2 - Geen Hacks:</strong> Het gebruik van hacks of cheats is verboden.</li>
+            <li><strong>Artikel 3 - Respect en Gedrag:</strong> Beledigingen, racisme, en intimidatie zijn verboden.</li>
+            <li><strong>Artikel 4 - Geen Spam:</strong> Spammen in de chat is verboden.</li>
+            <li><strong>Artikel 5 - Eerlijke Handel:</strong> Scammen is verboden.</li>
         </ul>
     </section>
 
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
+        <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
     </footer>
 </body>
 </html>
