--- a/index.html
+++ b/index.html
@@ -3,34 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | JD Games</title>
+    <title>JD Games - Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="https://media.discordapp.net/attachments/1198702297325244528/1296888692924874782/jdgames_logo.png?ex=67304577&is=672ef3f7&hm=d7633411486a4224e68af94f15939fdba91506d2d8e695fee9c7ae8a600658ee&=&format=webp&quality=lossless" alt="JD Games Logo">
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="staff.html">Staff Team</a></li>
-                <li><a href="rules.html">Regels</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#info">Informatie</a></li>
+                <li><a href="#rules">Regels</a></li>
+                <li><a href="#staff">Team</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home">
-        <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-        <p>Welkom bij JD Games! We bieden een geweldige Minecraft server-ervaring met verschillende game modes.</p>
-        <p>✈️ IP-adres: Play.jdgames.nl</p>
-        <p>⚡ Versie: 1.21+</p>
-        <p>⚔️ Gamemode: Survival & Skyblock</p>
-        <p>❄️ Openings Tijden: 24/7</p>
-        <p>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier</a></p>
-        <p>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">Klik hier</a></p>
+    <!-- Home Section -->
+    <section id="home" class="section">
+        <div class="container">
+            <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+            <p>Ervaar het avontuur op onze Minecraft server! Kom spelen in onze geweldige community met verschillende gamemodes zoals Survival en Skyblock. Voel je welkom!</p>
+        </div>
     </section>
 
+    <!-- Informatie Section -->
+    <section id="info" class="section">
+        <div class="container">
+            <h2>Informatie Over ons</h2>
+            <ul>
+                <li>✈️ IP-adres: Play.jdgames.nl</li>
+                <li>⚡ Versie: 1.21+</li>
+                <li>⚔️ Gamemode: Survival & Skyblock</li>
+                <li>❄️ Openings Tijden: 24/7</li>
+                <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Discord</a></li>
+                <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Regels Section -->
+    <section id="rules" class="section">
+        <div class="container">
+            <h2>Server Regels</h2>
+            <p>Lees de regels voor een veilige en leuke ervaring op onze server!</p>
+            <div class="rule-buttons">
+                <a href="factions.html" class="rule-button">Factions Regels</a>
+                <a href="skyblock.html" class="rule-button">Skyblock Regels</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Section -->
+    <section id="staff" class="section">
+        <div class="container">
+            <h2>Ons Team</h2>
+            <p>Maak kennis met de mensen achter JD Games!</p>
+            <ul>
+                <li><strong>Jonathan - Eigenaar:</strong> Verantwoordelijk voor betalingen, ontwikkeling, en staff management.</li>
+                <li><strong>David - Eigenaar:</strong> Verantwoordelijk voor betalingen, support en staff management.</li>
+                <li><strong>Nisse - Management:</strong> Hoofd van het development team, verantwoordelijk voor plugins en serverontwikkeling.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contacteer ons</h2>
+            <ul>
+                <li>☎️ Discord: Maak een ticket aan op onze Discord.</li>
+                <li>✉️ Email: JDGamesOfficialYT@gmail.com</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
