--- a/index.html
+++ b/index.html
@@ -8,36 +8,37 @@
 </head>
 <body>
     <div class="container">
-        <!-- Dit is de sectie-container waar de inhoud wordt verdeeld -->
-        <div class="section-container">
-            <div class="section">
-                <h2>Welkom op de JD Games Minecraft Server</h2>
-                <p>Informatie Over ons:</p>
-                <ul>
-                    <li>IP-adres: Play.jdgames.nl</li>
-                    <li>Versie: 1.21+</li>
-                    <li>Gamemode: Survival & Skyblock</li>
-                    <li>Openings Tijden: 24/7</li>
-                    <li>Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier</a></li>
-                    <li>Website: shop.jdgames.nl</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>Contacteer ons</h2>
-                <ul>
-                    <li>Discord: Maak een ticket aan</li>
-                    <li>Email: JDGamesOfficialYT@gmail.com</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>Staff Team</h2>
-                <p>Bekijk wie ons team vormt!</p>
-                <ul>
-                    <li>Jonathan - Eigenaar</li>
-                    <li>David - Eigenaar</li>
-                    <li>Nisse - Management</li>
-                </ul>
-            </div>
+        <!-- Welkomstsectie -->
+        <div class="section">
+            <h2>Welkom op de JD Games Minecraft Server</h2>
+            <p>Informatie over ons:</p>
+            <ul>
+                <li>IP-adres: Play.jdgames.nl</li>
+                <li>Versie: 1.21+</li>
+                <li>Gamemode: Survival & Skyblock</li>
+                <li>Openings Tijden: 24/7</li>
+                <li>Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier</a></li>
+                <li>Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+            </ul>
+        </div>
+
+        <!-- Contactsectie -->
+        <div class="section">
+            <h2>Contacteer ons</h2>
+            <ul>
+                <li>Discord: Maak een ticket aan</li>
+                <li>Email: JDGamesOfficialYT@gmail.com</li>
+            </ul>
+        </div>
+
+        <!-- Teamsectie -->
+        <div class="section">
+            <h2>Staff Team</h2>
+            <ul>
+                <li>Jonathan - Eigenaar</li>
+                <li>David - Eigenaar</li>
+                <li>Nisse - Management</li>
+            </ul>
         </div>
     </div>
 
