--- a/admin.html
+++ b/admin.html
@@ -14,11 +14,11 @@
             <option value="home">Home</option>
             <option value="contact">Contact</option>
             <option value="staff">Staff Team</option>
-            <!-- Voeg hier andere pagina's toe die je beheert -->
+            <!-- Andere pagina's toevoegen als nodig -->
         </select>
         <button id="edit-page-button">Bewerken</button>
 
-        <div id="page-details">
+        <div id="page-details" style="display:none;">
             <h3>Details van de geselecteerde pagina:</h3>
             <input type="text" id="page-title" placeholder="Titel van de pagina" />
             <textarea id="page-content" placeholder="Voer de inhoud van de pagina in..."></textarea>
